# mentorias

engenharia_de_dados/arquitetura/: .gitignore  README.md  TASKS.md  apostila-completa-s01-s05.md  pyproject.toml
engenharia_de_dados/arquitetura/config/domains/: marketing.yaml
engenharia_de_dados/arquitetura/python/cdc_generator/: README.md
engenharia_de_dados/arquitetura/python/cdc_generator/scripts/: build_session_03_assets.py
engenharia_de_dados/arquitetura/python/cdc_generator/tests/: test_generic_cdc.py  test_generic_generator.py
engenharia_de_dados/arquitetura/scripts/: generate_domain_data.py
engenharia_de_dados/arquitetura/sessoes/sessao-02-03-airflow-cdc-tabelas/: apostila-sessao-02-03-ultra-detalhada.html  arquivos-consolidados.md  checklist-execucao-ao-vivo.html  docker-compose.yml
engenharia_de_dados/arquitetura/sessoes/sessao-02-orquestracao-airflow/: .env  docker-compose.yml  plano-aula.md
engenharia_de_dados/arquitetura/sessoes/sessao-03-cdc-airflow-tabelas/: docker-compose.yml
engenharia_de_dados/arquitetura/sessoes/sessao-04-particionamento/: resumo.md
engenharia_de_dados/arquitetura/sessoes/sessao-05-infraestrutura/: apostila-sessao-05-ultra-detalhada.md  sessao-05-infraestrutura.md
engenharia_de_dados/arquitetura/src/zambotto_mentoria/: generic_cdc.py
engenharia_de_dados/arquitetura/src/zambotto_mentoria.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
engenharia_de_dados/arquitetura/tests/: test_domain_config.py  test_generate_domain_data_cli.py
sessao-02-03-airflow-cdc-tabelas/: checklist-execucao-ao-vivo.md  (+3 more)
(+84 files in other folders)
